first pass at auto-prepping music files. Also, moved cache.manifest to be static file

--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html manifest="cache.manifest">
+<!--html-->
   <head>
+    <!--meta name="viewport" content="width=device-width, initial-scale=1, user-scalable = no"-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <title>Music Player</title>
   </head>
   <body>
-    <h1>A Music Player! </h1>
+    <h2>Music Player!</h2>
     <div id=app-container></div>
   </body>
 </html>
