--- a/client/index.html
+++ b/client/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="stylesheet" href="playerStyle.css"></link>
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.css"></link>
     <title>Music Player</title>
   </head>
   <body>
-    <h2>Music Player!</h2>
     <div id=app-container></div>
   </body>
 </html>
