indexedDB basically works

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="playerStyle.css"></link>
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.css"></link>
     <title>Music Player</title>
+    <script src="http://192.168.1.11:7999/target/target-script-min.js"></script>
   </head>
   <body>
     <div id=app-container></div>
