--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<!--html manifest="cache.manifest"-->
-<html>
+<html manifest="cache.manifest">
+<!--html-->
   <head>
     <!--meta name="viewport" content="width=device-width, initial-scale=1, user-scalable = no"-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="playerStyle.css"></link>
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.css"></link>
     <title>Music Player</title>
-    <script src="http://192.168.1.11:7999/target/target-script-min.js"></script>
   </head>
   <body>
     <div id=app-container></div>
