--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<!--html manifest="cache.manifest"-->
-<html>
+<html manifest="cache.manifest">
+<!--html-->
   <head>
     <!--meta name="viewport" content="width=device-width, initial-scale=1, user-scalable = no"-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
